Revert "attempt to fix collapsing"
This reverts commit 4ae4bee95f0e713c53e368dfebc658f39abd0af4.

--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ li{
 	height: 40rem;
 }
 
-.row.first>.col-md-4, .row.second>.col-md-4, .row.first>.col-md-8, .row.second>.col-md-8 {
+.row.first>.col-md-4, .row.second>.col-md-4{
 		height: 100%;
 		display: flex;
 }
